# WALDO

./: .gitignore  README.md  data  pyproject.toml  pyrightconfig.json
notebooks/: ENGINE-fidelidad.ipynb  ENGINE-umbral.ipynb  ENGINE-unet_denoising.ipynb  ENGINE-wavelets_denoising.ipynb  EXP-criterio_fidelidad.ipynb  EXP-curvelets_denoising.ipynb  EXP-definicion_umbral.ipynb  EXP-fidelidad_1.ipynb  EXP-fidelidad_2.ipynb  EXP-fidelidad_3.ipynb  EXP-mca_denoising.ipynb  EXP-unet_denoising.ipynb  EXP-unet_mockcubes.ipynb  EXP-wavelet_coefficients.ipynb  EXP-wavelet_denoising.ipynb  EXP-wavelet_mockcubes.ipynb  EXPORTACION-modificador.ipynb
scripts/: setup_env.py
src/: curvelets_denoising.py  dicts_wavelets.py  mca_denoising.py  toy_cube_dataset.py  u_net_model.py  unet_train.py  wavelet_denoising.py
src/waldo/: __init__.py
