[project]
name = "waldo"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Sebastián Castro", email = "sebastiancastrobanda@gmail.com" }
]
requires-python = ">=3.10,<3.14"
dependencies = [
    "numpy>=1.24",
    "scipy>=1.11",
    "astropy>=5.3",
    "scikit-learn>=1.3",
    "torch>=2.0",
    "matplotlib>=3.7",
    "h5py>=3.9",
    "pandas>=2.0",
    "spectral-cube>=0.6",
    "astrodendro>=0.2",
    "jupyter>=1.0",
    "ipykernel>=6.0",
    "radio-beam>=0.3.9",
    "polars>=1.41.0",
    "polars-astro>=0.2.2",
    "scikit-image>=0.25.2",
    "curvelets>=1.1",
    "pycs",
]

# CosmoStat / pycs no está en PyPI: se instala desde git (requiere CMake en el
# sistema para el build). Así uv sync lo gestiona y no lo elimina.
[tool.uv.sources]
pycs = { git = "https://github.com/CosmoStat/cosmostat" }

# ---------------------------------------------------------------------------
# Dependencias externas (ver README para detalles):
#   - pycs (CosmoStat): declarado arriba con fuente git; uv sync lo compila.
#   - Sparse2D: backend C++ que se instala con `brew install sparse2d`.
#   - pysparse: binding precompilado en vendor/; lo instala scripts/setup_env.py.
# ---------------------------------------------------------------------------

[project.scripts]
waldo = "waldo:main"

[build-system]
requires = ["uv_build>=0.11.2,<0.12.0"]
build-backend = "uv_build"

[tool.ruff]
line-length = 88
target-version = "py310"

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "F",    # pyflakes
    "I",    # isort
    "UP",   # pyupgrade
    "B",    # flake8-bugbear
    "SIM",  # flake8-simplify
    "NPY",  # NumPy-specific rules
]
ignore = [
    "E501", # line too long (handled by formatter)
]

[tool.ruff.lint.isort]
known-first-party = ["waldo"]
